# FEMethod

./: README.md
code/exercise1/: CMakeLists.txt  README.md
code/exercise1/design/: design.aux  design.tex
code/exercise1/include/: BVP.hpp  FuncBasis.hpp  MeshGrid.hpp  PiecewiseLinear.hpp  RealFunc.hpp  testfunc  testfunc.cpp
code/exercise1/src/: Dirichletinput.json  Dirichlettest.cpp  Neumanninput.json  Neumanntest.cpp  Robininput.json  Robintest.cpp  input.json  output.m  uniformtest  uniformtest.cpp
note/: chap1.tex  chap2.tex  chap3.tex  chap4.tex  chap5.tex  chap6.tex  chap7.tex  chap8.tex  elegantbook.cls  note.tex  note1.tex
